--- a/src/assets/css/inputs_styles.css
+++ b/src/assets/css/inputs_styles.css
@@ -24,6 +24,18 @@ body {
 	@apply no-underline bg-transparent cursor-pointer opacity-90;
 }
 
+.darkMode .cnav--ul__li {
+	@apply text-cwhite;
+}
+
+.darkMode .--light {
+	display: none !important;
+}
+
+.lightMode .--dark {
+	display: none !important;
+}
+
 .cnav--ul__li:focus-within {
 	@apply opacity-100 no-underline;
 }
@@ -31,15 +43,19 @@ body {
 	@apply opacity-100 underline;
 }
 .cnav--ul {
-	@apply fixed top-0 left-0 z-10 flex-wrap items-center w-full h-full p-0 mt-20 space-y-5 leading-6  bg-white;
+	@apply fixed top-0 left-0 z-10 flex-wrap items-center w-full h-full p-0 mt-20 space-y-5 leading-6;
 }
 
-.btn--primary {
-	@apply font-bold  inline-block px-6 py-3 text-sm leading-normal  no-underline align-middle cursor-pointer select-none;
+.btn--primary,
+.btn--segondary {
+	@apply transition-all duration-300 ease-in-out rounded-md font-bold  inline-block px-6 py-3 text-sm leading-normal  no-underline align-middle cursor-pointer select-none;
 }
 
 .btn--primary__y {
-	@apply bg-cyellow text-cblack;
+	@apply bg-cyellow text-cblack border-2 border-cyellow;
+}
+.btn--primary__y:hover {
+	@apply bg-white border-2 border-cyellow;
 }
 
 .btn--primary__b {
@@ -54,10 +70,26 @@ body {
 	@apply border-cblack;
 }
 
+.btn--segondary__y {
+	@apply text-cyellow;
+}
+
+.btn--segondary__y:hover {
+	@apply text-white underline;
+}
+
 .ctitle--h1 {
 	@apply box-border mt-0 mb-4 text-2xl font-black;
 }
 
 .form--group {
 	@apply w-full;
+}
+
+.cbox--services {
+	@apply transition-all duration-300 ease-in-out p-8 text-center rounded-xl bg-white;
+}
+
+.cbox--services:hover {
+	@apply bg-cyellow;
 }
