--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -10,7 +10,7 @@
 			<div class="relative flex list-none lg:block" :class="{'flex fixed': showMenu, 'hidden': !showMenu }">
 				<ul class="cnav--ul lg:space-x-8 lg:static lg:w-auto lg:flex lg:space-y-0 lg:mt-0">
 					<li class="box-border w-full my-3 text-lg text-center lg:w-auto">
-						<a href="/src/landing.html" class="cnav--ul__li">Nos services</a>
+						<a href="/src/services.html" class="cnav--ul__li">Nos services</a>
 					</li>
 					<!-- <li class="box-border w-full my-3 text-lg text-center lg:w-auto">
 						<a href="#sect2" class="cnav--ul__li">Nos clients</a>
