--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -16,18 +16,18 @@
 						<a href="#sect2" class="cnav--ul__li">Nos clients</a>
 					</li> -->
 					<li class="box-border w-full my-3 text-lg text-center lg:w-auto">
-						<a href="#sect3" class="cnav--ul__li">Nos partenaires</a>
+						<a @click="showMenu = !showMenu" href="#sect3" class="cnav--ul__li">Nos partenaires</a>
 					</li>
 					<li class="box-border w-full my-3 text-lg text-center lg:w-auto">
-						<a href="#sect4" class="btn--primary btn--primary__y lg:py-3 lg:px-8">Contactez-nous</a>
+						<a @click="showMenu = !showMenu" href="#sect4" class="btn--primary btn--primary__y lg:py-3 lg:px-8">Contactez-nous</a>
 					</li>
 				</ul>
 			</div>
 			<div @click="showMenu = !showMenu" class="absolute right-0 flex flex-col items-center justify-center w-10 h-10 mr-5 -mt-1 rounded-full cursor-pointer lg:hidden hover:bg-gray-100">
-				<svg class="w-6 h-6 text-gray-700" x-show="!showMenu" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor" x-cloak="">
+				<svg class="w-6 h-6 menu--btn" x-show="!showMenu" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor" x-cloak="">
 					<path d="M4 6h16M4 12h16M4 18h16"></path>
 				</svg>
-				<svg class="w-6 h-6 text-gray-700" x-show="showMenu" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" x-cloak="">
+				<svg class="w-6 h-6 menu--btn" x-show="showMenu" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" x-cloak="">
 					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
 				</svg>
 			</div>
