--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -1,7 +1,7 @@
-<div id="nav--section">
+<div id="nav--section" class="fixed w-full top-0 left-0 right-0">
 	<section class="w-full" x-data="{ showMenu: false }">
 		<nav class="box-border flex items-center justify-between w-full h-35 px-3 md:px-6 mx-auto my-0 py-4 leading-6 max-w-6xl">
-			<a href="/index.html" class="flex items-center font-medium text-gray-900 lg:w-auto title-font lg:items-center lg:justify-center md:mb-0">
+			<a @click="showMenu = !showMenu" href="/index.html" class="flex items-center font-medium text-gray-900 lg:w-auto title-font lg:items-center lg:justify-center md:mb-0">
 				<span class="text-xl font-black leading-none text-gray-900 select-none">
 					<img src="../public/img/logo.png" alt="IRAGI SOLUTIONS" class="sm:w-[180px] w-[120px] --light" />
 					<img src="../public/img/logo_white.svg" alt="IRAGI SOLUTIONS" class="sm:w-[180px] w-[120px] --dark" />
