--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -3,8 +3,8 @@
 		<nav class="box-border flex items-center justify-between w-full h-35 px-3 md:px-6 mx-auto my-0 py-4 leading-6 max-w-6xl">
 			<a @click="showMenu = !showMenu" href="/index.html" class="flex items-center font-medium text-gray-900 lg:w-auto title-font lg:items-center lg:justify-center md:mb-0">
 				<span class="text-xl font-black leading-none text-gray-900 select-none">
-					<img src="../public/img/logo.png" alt="IRAGI SOLUTIONS" class="sm:w-[180px] w-[120px] --light" />
-					<img src="../public/img/logo_white.svg" alt="IRAGI SOLUTIONS" class="sm:w-[180px] w-[120px] --dark" />
+					<img src="./public/img/logo.png" alt="IRAGI SOLUTIONS" class="sm:w-[180px] w-[120px] --light" />
+					<img src="./public/img/logo_white.svg" alt="IRAGI SOLUTIONS" class="sm:w-[180px] w-[120px] --dark" />
 				</span>
 			</a>
 			<div class="relative flex list-none lg:block" :class="{'flex fixed': showMenu, 'hidden': !showMenu }">
