--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -5,7 +5,7 @@
 				<div class="col-span-2 sm:flex sm:justify-between">
 					<div class="col-span-1">
 						<a href="#">
-							<img src="../public/img/logo_gray.svg" alt="IRAGI SOLUTIONS" width="120px" class="-mt-4" />
+							<img src="https://vincejs77.github.io/landing001/public/img/logo_gray.svg" alt="IRAGI SOLUTIONS" width="120px" class="-mt-4" />
 						</a>
 					</div>
 					<div class="col-span-1 sm:mt-0 mt-8">
@@ -16,22 +16,22 @@
 						<ul class="flex justify-left mt-6 space-x-8">
 							<li>
 								<a href="http://" target="_blank" rel="noopener noreferrer">
-									<img src="../public/img/socials/insta.svg" alt="" />
+									<img src="https://vincejs77.github.io/landing001/public/img/socials/insta.svg" alt="" />
 								</a>
 							</li>
 							<li>
 								<a href="http://" target="_blank" rel="noopener noreferrer">
-									<img src="../public/img/socials/tw.svg" alt="" />
+									<img src="https://vincejs77.github.io/landing001/public/img/socials/tw.svg" alt="" />
 								</a>
 							</li>
 							<li>
 								<a href="http://" target="_blank" rel="noopener noreferrer">
-									<img src="../public/img/socials/fb.svg" alt="" />
+									<img src="https://vincejs77.github.io/landing001/public/img/socials/fb.svg" alt="" />
 								</a>
 							</li>
 							<li>
 								<a href="http://" target="_blank" rel="noopener noreferrer">
-									<img src="../public/img/socials/in.svg" alt="" />
+									<img src="https://vincejs77.github.io/landing001/public/img/socials/in.svg" alt="" />
 								</a>
 							</li>
 						</ul>
