--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -4,7 +4,7 @@
 			<div class="grid md:grid-cols-4 w-full">
 				<div class="col-span-2 sm:flex sm:justify-between">
 					<div class="col-span-1">
-						<a href="#">
+						<a href="https://vincejs77.github.io/landing001/">
 							<img src="https://vincejs77.github.io/landing001/public/img/logo_gray.svg" alt="IRAGI SOLUTIONS" width="120px" class="-mt-4" />
 						</a>
 					</div>
